# hydrodynamics

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
examples/: parse_model.cpp
examples/description/: bluerov2.model.urdf
include/: eigen.hpp  hydrodynamics.hpp  parser.hpp
include/hydrodynamics/: eigen.hpp  hydrodynamics.hpp
src/: hydrodynamics.cpp  parser.cpp
